--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,16 @@
 * {
 	margin: 0px;
-	padding: 0px;	
+	padding: 0px;
+  box-sizing: border-box;
 }
 
 body {
 	background-color: rgb(255,255,255);
 	font-family: 'sources sans pro', sans-serif;
+  background-color: #fff;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 15px;
+  line-height: 1.5;
 }
 h1 {
 	text-align: center;
@@ -18,10 +23,6 @@ p{
 	
 }
 
-.btn{
-
-
-}
 
 .btn{
 
@@ -30,7 +31,7 @@ p{
 	position: fixed;
 	font-size: 2rem;
 	position-bottom: 0px;
-background-color: #ccc;
+  background-color: #ccc;
 	border-radius: 50%;	
 	position-top: 2rem;
 	border: none;           
@@ -48,7 +49,11 @@ background-color: #ccc;
 	font-size: 4rem;
 }
 
+
+
+
 /* icon search */
+
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900');
 $dark: #2c312e;
 $pink: #e85454;
@@ -59,6 +64,7 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
   overflow: hidden;
 }
+
 
 .container {
   background-color: black;
@@ -104,7 +110,7 @@ body {
 }
 
 ::-webkit-input-placeholder {
-  font-size: 15px;
+  font-size: 25px;
   opacity: 0.5;
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 100;
@@ -136,16 +142,25 @@ body {
   outline: none;
   border: none;
   width: 100px;
-  transition: all 1s ease;
-}
-
-.clicked {
+  transition: all 1s easbor
   transform: scale(1.5) translateY(-25px);
   transition: all 1s ease;
 }
 
-
-
-
-
 /* icon search */
+
+
+.btn-home{
+  color: green;
+  font-size: 1.5rem;
+  display: flex;
+  align-content: center;
+  align-items: center;
+  position: fixed;
+  top: 10px;
+  right: -150px;
+  bottom: -550px;
+  width: 180px;
+     
+}
+
