--- a/css/style.css
+++ b/css/style.css
@@ -164,8 +164,8 @@ body {
      
 }
 
-@media screen and (min-width: 458px){
-    .search {
-     font-size: 10px;
+@media screen and (max-width: 458px){
+    ::-webkit-input-placeholder {
+     font-size: 15px;
    }
 }
